--- a/lab/lab1/lab01.ipynb
+++ b/lab/lab1/lab01.ipynb
@@ -156,16 +156,12 @@
    "outputs": [],
    "source": [
     "# TODO: fill in the missing expression for the likelihood ratio in the function below\n",
-    "def calculate_likelihood_ratio(x, mean_0, stdev_0, mean_1, stdev_1):\n",
+    "def calculate_likelihood_ratio(x):\n",
     "    \"\"\"\n",
     "    Computes the likelihood ratio between the alternative and null hypothesis.\n",
     "    \n",
     "    Inputs:\n",
     "        x: value for which to compute the likelihool ratio\n",
-    "        mean_0: mean of the null distribution\n",
-    "        stdev_0: standard deviation of the null distribution\n",
-    "        mean_1: mean of the alternative distribution\n",
-    "        stdev_0: standard deviation of the alternative distribution\n",
     "    \n",
     "    Outputs:\n",
     "        lr : the likelihood ratio at point x\n",
@@ -185,7 +181,7 @@
    "source": [
     "# Compute the likelihood ratio for X=1.64\n",
     "X=1.64\n",
-    "LR = calculate_likelihood_ratio(X, 0,1,1,1)\n",
+    "LR = calculate_likelihood_ratio(X)\n",
     "print(LR)\n",
     "assert(get_hash(LR)== 'f9983e1a6585502f3006cb6d1c1edec3')\n",
     "print(\"Test passed!\")"
@@ -207,7 +203,7 @@
     "# The code below plots the LR for different values of X\n",
     "# Once you've filled in `calculate_likelihood_ratio` run this cell and inspect the plot\n",
     "x_axis = np.arange(-1, 3, 0.001)\n",
-    "plt.plot(x_axis, calculate_likelihood_ratio(x_axis, 0,1,1,1))\n",
+    "plt.plot(x_axis, calculate_likelihood_ratio(x_axis))\n",
     "plt.vlines(X, 0, LR, linestyle=\"dotted\", color='k')\n",
     "plt.hlines(LR, -1, X, linestyle=\"dotted\", color='k')\n",
     "plt.scatter(X, LR, 30, color='k')\n",
@@ -930,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
