--- a/lab/lab3/lab03.ipynb
+++ b/lab/lab3/lab03.ipynb
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.d (i) Set $k=0$, what do you notice about the data points. Increase steadily the value of $k$. What happens with the points aboce the dashed line? What about the points below it?"
+    "1.d (i) Set $k=0$, what do you notice about the data points. Increase steadily the value of $k$. What happens with the points above the dashed line? What about the points below it?"
    ]
   },
   {
@@ -434,9 +434,11 @@
    "source": [
     "## Question 2: \n",
     "\n",
+    "### Note: DataHub is having issues with PyMC. We are trying to fix that. Download the notebook and run the rest on your local machine. We hope to address this issue soon.\n",
+    "\n",
     "In the previous question we looked at a Beta-Binomial Graphical model. We took advantage of the conjugacy properties of the model and were able to compute close form solutions for the posterior mean estimates.\n",
     "\n",
-    "However, as we introduce more complexity to the model, the conjugacy property quickly brakes and we have to resort to sampling techniques. Sampling techniques fpr approximate inference will be the topic of this week's lectures and next week's labs.\n",
+    "However, as we introduce more complexity to the model, the conjugacy property quickly brakes and we have to resort to sampling techniques. Sampling techniques for approximate inference will be the topic of this week's lectures and next week's labs.\n",
     "\n",
     "Before delving deeper, in this question you will get a taste for probabilistic programming using `PyMC3`. Spend some time perusing the [documentation](https://docs.pymc.io/), but don't worry if don't really understand what's going on. "
    ]
@@ -447,6 +449,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture install\n",
+    "! pip install arviz==0.6.1\n",
+    "! pip install pymc3==3.8\n",
+    "! pip install Theano==1.0.4\n",
+    "\n",
     "import pymc3 as pm"
    ]
   },
