--- a/lab/lab3/lab03.ipynb
+++ b/lab/lab3/lab03.ipynb
@@ -447,11 +447,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture install\n",
-    "! pip install arviz==0.6.1\n",
-    "! pip install pymc3==3.8\n",
-    "! pip install Theano==1.0.4\n",
+    "# %%capture install\n",
+    "# ! pip install arviz==0.6.1\n",
+    "# ! pip install pymc3==3.8\n",
+    "# ! pip install Theano==1.0.4\n",
     "\n",
+    "\n",
+    "## If this fails uncomment the 4 lines above\n",
     "import pymc3 as pm"
    ]
   },
