--- a/lab/lab3/lab03.ipynb
+++ b/lab/lab3/lab03.ipynb
@@ -477,7 +477,7 @@
     "    with pm.Model() as model:\n",
     "        theta = pm.Beta('theta', alpha=alpha_value, beta=beta_value, shape=len(study_df))\n",
     "        X = pm.Binomial('X', p=theta, observed=study_df['X'], n=study_df['N'])\n",
-    "        trace = pm.sample(500, tune=1000, target_accept=0.95)\n",
+    "        trace = pm.sample(500, tune=1000, target_accept=0.95, random_seed = 0)\n",
     "    return(model, trace)"
    ]
   },
@@ -694,7 +694,7 @@
     "        theta = # TODO: fill in\n",
     "        AR = # TODO: fill in\n",
     "        X = # TODO: fill in\n",
-    "        trace = pm.sample(500, tune=1000, target_accept=0.95)\n",
+    "        trace = pm.sample(500, tune=1000, target_accept=0.95, random_seed=0)\n",
     "    return(model, trace)"
    ]
   },
