rnd seed updates

--- a/lab/lab3/lab03.ipynb
+++ b/lab/lab3/lab03.ipynb
@@ -544,6 +544,25 @@
    "outputs": [],
    "source": [
     "# Validation tests: Do not modify\n",
+    "# Even if you don't pass the tests but get smth reasonably close to the numbers below you can consider it as passed\n",
+    "\n",
+    "# Study 0:  0.303 \n",
+    "# Study 1:  0.261 \n",
+    "# Study 2:  0.340 \n",
+    "# Study 3:  0.307 \n",
+    "# Study 4:  0.287 \n",
+    "# Study 5:  0.329 \n",
+    "# Study 6:  0.325 \n",
+    "# Study 7:  0.282 \n",
+    "# Study 8:  0.232 \n",
+    "# Study 9:  0.372 \n",
+    "# Study 10:  0.433 \n",
+    "# Study 11:  0.352\n",
+    "    \n",
+    "posterior_estimates_test = empirical_posterior_mean_estimates(10,25)\n",
+    "\n",
+    "for i, est in enumerate(posterior_estimates_test):\n",
+    "    print('Study {}:  {:.3f} '.format(i, est))\n",
     "posterior_estimates_test = empirical_posterior_mean_estimates(10,25)\n",
     "hash_list = ['e85b79abfd76b7c13b1334d8d8c194a5','261943f3a93b683ceeac658927f3923f','149dd5056939405870c9bb50cbc8691c', \n",
     "             'ba6197788db60f5e2cb45cd403fa6559','246c0903b5a64b2a854ec1e7865f174f','ffa243f771800363714f6055d9236fd6', \n",
@@ -705,9 +724,27 @@
    "outputs": [],
    "source": [
     "# Validation tests: Do not modify\n",
+    "# Even if you don't pass the tests but get smth reasonably close to the numbers below you can consider it as passed\n",
+    "# Study 0:  0.374 \n",
+    "# Study 1:  0.300 \n",
+    "# Study 2:  0.444 \n",
+    "# Study 3:  0.385 \n",
+    "# Study 4:  0.359 \n",
+    "# Study 5:  0.423 \n",
+    "# Study 6:  0.415 \n",
+    "# Study 7:  0.354 \n",
+    "# Study 8:  0.285 \n",
+    "# Study 9:  0.481 \n",
+    "# Study 10:  0.556 \n",
+    "# Study 11:  0.450\n",
+    "\n",
     "model_test, trace_test = fit_approximate_inference_AR(5, 10)\n",
     "post_samples_test = sample_posterior_theta(model_test, trace_test)\n",
     "estimates = np.mean(post_samples_test, axis = 0)\n",
+    "\n",
+    "for i, est in enumerate(estimates):\n",
+    "    print('Study {}:  {:.3f} '.format(i, est))\n",
+    "\n",
     "\n",
     "hash_list = ['54fbf38cf649866815e0fefc46a1f6c7', 'e85b79abfd76b7c13b1334d8d8c194a5', \n",
     "             '54fbf38cf649866815e0fefc46a1f6c7', '54fbf38cf649866815e0fefc46a1f6c7', \n",
