rnd seed updates

--- a/lab/lab3/lab03.ipynb
+++ b/lab/lab3/lab03.ipynb
@@ -686,7 +686,7 @@
     "Recent studies have shown that a large fraction of COVID cases do not show symptoms. The estimates of the asymptomatic rate fall in the range $[0.18, 0.43]$. We assume a prior $AR\\sim Uniform(0.18, 0.43)$\n",
     "\n",
     "All of the studies considered here tested only symptomatic cases, meaning that the probability that a person in a study tests positive is $\\theta_i*(1-AR)$. Hence:\n",
-    "$$X_i|\\theta_i, AR \\sim Binomial(N_i, \\theta_i\\cdot AR)$$\n",
+    "$$X_i|\\theta_i, AR \\sim Binomial(N_i, \\theta_i\\cdot (1-AR))$$\n",
     "\n",
     "#### Complete `fit_approximate_inference_AR` function to add dependence on the asymptomatic rate:\n",
     "`Hint`: Consider [pm.Uniform](https://docs.pymc.io/api/distributions/continuous.html#pymc3.distributions.continuous.Uniform)"
