--- a/lab/lab3/lab03.ipynb
+++ b/lab/lab3/lab03.ipynb
@@ -146,10 +146,10 @@
    "source": [
     "**Trivial estimates suggest that both minimum and maximum probabilities of infection correspond to small studies.**\n",
     "\n",
-    "|      | Max     | Min     |\n",
+    "|      | Min     | Max     |\n",
     "|------|---------|---------|\n",
     "| Name | Study 1 | Study 2 |\n",
-    "| X    | 2       | 8       | \n",
+    "| X    | 2       | 6       | \n",
     "| N    | 11      | 12      |\n",
     "|$\\theta$| 0.18  | 0.50    |\n",
     "\n",
