--- a/lab/lab4/lab04.ipynb
+++ b/lab/lab4/lab04.ipynb
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the contour plot above we can see that $f(x, y=1.2)$ is allways smaller than 7.4. Hence to make it smaller than $q(x) = 1/9$ we need to scale the target density by a factor $c \\leq \\frac{1}{7.4}\\cdot\\frac{1}{8} = 0.015$. \n",
+    "From the contour plot above we can see that $f(x, y)$ is allways smaller than 7.4. Hence to make it smaller than $q(x) = 1/9$ we need to scale the target density by a factor $c \\leq \\frac{1}{7.4}\\cdot\\frac{1}{9} = 0.015$. \n",
     "\n",
     "#### Let's use $c=0.015$, compute target samples and plot them on top the contour lines"
    ]
