--- a/lab/lab5/lab5.ipynb
+++ b/lab/lab5/lab5.ipynb
@@ -493,7 +493,7 @@
     "Similarly we define $H_k$ to be the minimal bandwidth value $h$ for which $\\hat{p}_h(k)$ has $k$ modes:\n",
     "\n",
     "\\begin{align}\n",
-    "    H_k & = \\min \\{h \\colon m(\\hat{p}_h) = k, \\, m(\\hat{p}_{h'}) > k+1 \\text{ for all } h' < h\\}.\n",
+    "    H_k & = \\min \\{h \\colon m(\\hat{p}_h) = k, \\, m(\\hat{p}_{h'}) > k \\text{ for all } h' < h\\}.\n",
     "\\end{align}\n",
     "\n",
     "We will use $H_k$ as the test statistic. \n",
