--- a/lab/lab5/lab5.ipynb
+++ b/lab/lab5/lab5.ipynb
@@ -619,7 +619,7 @@
     "    \n",
     "    We'll use this more complicated variance scaling in the code. In the equation above we have:\n",
     "    - $\\bar{Z}^{*(b)}$ is the sample mean of the bootstrap samples $Z^{*(b)}$.\n",
-    "    - $\\hat\\sigma$ is the variance of the original observed data.\n",
+    "    - $\\hat\\sigma^2$ is the variance of the original observed data.\n",
     "    - $h_k$ is the minimum bandwidth h such that the density estimate for the original observed data has k modes.\n",
     "    - $\\epsilon_i^{(b)} \\sim \\mathcal{N}(0, 1)$, iid Gaussian noise\n",
     "    \n",
