--- a/lab/lab5/lab5.ipynb
+++ b/lab/lab5/lab5.ipynb
@@ -386,7 +386,7 @@
    "metadata": {},
    "source": [
     "### (i) Slide the value of $h$ from 0.1 to 4. What do you observe?\n",
-    "### (ii) For what values of $h$ do does the derivative close the 0 line more often? For small values of $h$ or larger values of $h$?"
+    "### (ii) For what values of $h$ do does the derivative cross the 0 line more often? For small values of $h$ or larger values of $h$?"
    ]
   },
   {
