--- a/lab/lab5/lab5.ipynb
+++ b/lab/lab5/lab5.ipynb
@@ -102,7 +102,7 @@
     "galaxies_df = pd.read_csv('galaxies.csv', index_col=0, header=0, names=['velocity'])\n",
     "# Divide all entries by 1000 for ease of reading.\n",
     "galaxies_df['velocity'] = galaxies_df['velocity'] / 1000\n",
-    "X_observed = galaxies_df['velocity']\n",
+    "X_observed = np.array(galaxies_df['velocity'])\n",
     "galaxies_df.head()"
    ]
   },
