--- a/lab/lab5/lab5.ipynb
+++ b/lab/lab5/lab5.ipynb
@@ -336,17 +336,22 @@
     "x_values = [10, 15, 20, 25, 30, 35]\n",
     "h_values = [0.5, 1, 2, 5, 10]\n",
     "inputs = list(itertools.product(x_values, h_values))\n",
-    "outputs = [p_hat(*inp, X_observed) for inp in inputs]\n",
-    "hash_list = ['bfde2cf30f9e9ce79408d99cab3e8bc8', '0574a27738923dd052ed0b873c176afc', '78b6d148d48bbea1345c899ca9e46909', \n",
-    "    'f4ee6417f4b3ac1be9eb6568e73144b6', '3ffdc10d8a61ad159f223313dfbc03e2', '605849c8f83de4da7c6fd144d7f58826', \n",
-    "    '3f372d09d37f32da442cb9ee0ac460f0', '5b3bc4848902c9a21de80767f9e339b8', '71c61135ff01aa84ee86864b86711f5b', \n",
-    "    '04d8f0e70a01305f62dbadaa76a8f7cb', '45bd1e472af7b3bc57dc9312833c17a0', '45367152f5d7346868703d4980f60e03', \n",
-    "    '27e795eb0f314edf0479737480ab0f2a', 'd16aea76e1e1217b7eb5f7395948d364', 'd9cd4af75fe14d77a6faa0335f83b8c0', \n",
-    "    '2f6f54bd4207339ea29d730563c34b14', '2e0bfa827d51449a197fae6ab9f4804c', 'e0e4a546725d40f259b552ae41932f38', \n",
-    "    'ee15c394e25320ba6ce793eeaef72cdb', '9740966b3dc9d6fd0efba0313c963536', '30565a8911a6bb487e3745c0ea3c8224', \n",
-    "    '7f77a1b9954bf3ae6f43c6298871aeda', 'e5b43ca16f1f9cf6cbcfa71cdc7220ae', '83441ddfbbdcf553b5efe63b81eb1832', \n",
-    "    '2a6b856fad8c51aed13cfd58c948b380', '3b15219be5ebd7c0831dc46746a52d3c', '870b8425c55942fe40463327364cb546', \n",
-    "    'a2eb92865432da0c58cef552428f4ed1', 'dfff58ed1f9b7657068b28b69b62d70e', 'ee217454afa3c02cb3f1799b5aad3608']\n",
+    "outputs = [p_hat_derivative(*inp, X_observed) for inp in inputs]\n",
+    "hash_list = ['4d0f910141950d0552516b08262c6d88', 'ee1e0a7c5f3203b121321e10ef9ebfcc', \n",
+    "             '9d74396d5f50aada0f76b53876289877', 'e5d1865cd14e2e2797315f411c865d34', \n",
+    "             'd1c6c5ed1452a2c20690b2d93a4f00e0', 'bc0aa7760f949f3f261bd22cccb0be88', \n",
+    "             'af15b8f51b361f749e298266d1b59221', 'bc0aa7760f949f3f261bd22cccb0be88', \n",
+    "             '8fafaedad116ebf18ae0c9815be36d64', '605849c8f83de4da7c6fd144d7f58826',\n",
+    "             'af4aa469cb849835c30a124d5d1bc107', 'c2cbc317b75f876eaf979554f31dda6a', \n",
+    "             '3ca9a3c86b0760635f3df430065bb8f6', 'b0d9065d75ae926cd362fba71d69b52b', \n",
+    "             'e495db35efd570a55591de3837f0ad14', 'e6a87177121c61d8c869ac6a6b1fbf27',\n",
+    "             '1d2cfabfe25e3044b685f90d10ba21cc', '44aacd1208bcd231cb57e2b1e754e980', \n",
+    "             '4aca2fa353792a6eacf7a83c0b7b5160', 'b9e7b54550fc3121a8ec2d20fb6829d7', \n",
+    "             '30565a8911a6bb487e3745c0ea3c8224', '3dae501e7f083a41cfbcb44adc05bda1', \n",
+    "             'cd6d97983b00e021e9c98b7c98d18c9d', '27dff86ccacff92bcbfee45308bf1e7e', \n",
+    "             '946cd8046a64ba7f47cda2b01242b4bd', '2de90d3403001c283e5c25b5f6de7136', \n",
+    "             '92d7818cdd51f18a20c81c926703ada6', '4b2cf601f8a8bcc16b098ec9976641e3',\n",
+    "             'b25679011e386ab0c912204ef86d5d73', '652eb2b63d10f43925443c94772e60f2']\n",
     "for i, inp in enumerate(inputs):\n",
     "    assert(get_hash(outputs[i])==hash_list[i])\n",
     "print('Test passed!')"
