--- a/lab/lab5/lab5.ipynb
+++ b/lab/lab5/lab5.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "$$K(x) = \\frac{1}{\\sqrt{2\\pi}} \\exp(-x^2/2)$$\n",
     "\n",
-    "_Take a few moments to convince yourself that $K$ is non-negative and non-decreasing._\n",
+    "_Take a few moments to convince yourself that $K$ is non-negative and non-increasing._\n",
     "\n",
     "In addition, the parameter $h > 0$ is a bandwidth parameter that captures how close data points $X_i$ must be to $x$ to influence its density: for larger values of $h$, more data points have an\n",
     "influence on the density at $x$, whereas for smaller values of $h$, only data points very close\n",
