--- a/lab/lab6/lab6.ipynb
+++ b/lab/lab6/lab6.ipynb
@@ -720,8 +720,9 @@
    "outputs": [],
    "source": [
     "# Plot the posterior distribution for the intercept and Temp_Anomaly coefficients\n",
-    "pm.plot_posterior(trace_poisson, ['Intercept', 'Temp_Anomaly'], credible_interval = 0.95, round_to = 3)\n",
-    "plt.show()"
+    "with bayes_model:\n",
+    "    pm.plot_posterior(trace_poisson, ['Intercept', 'Temp_Anomaly'], hdi_prob = 0.95, round_to = 3)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -761,16 +762,16 @@
     "# Do not modify\n",
     "# Sample C'_i|X_i \n",
     "with bayes_model:\n",
-    "        bayes_ppc = pm.sample_posterior_predictive(trace_poisson)\n",
-    "        bayes_ppc['y'] = bayes_ppc['y'] + 0.0\n",
+    "    bayes_ppc = pm.sample_posterior_predictive(trace_poisson)\n",
+    "    bayes_ppc['y'] = bayes_ppc['y'] + 0.0\n",
     "        \n",
-    "# Plot PPC samples\n",
-    "ppc_data = az.from_pymc3(trace_poisson, posterior_predictive=bayes_ppc)\n",
-    "az.plot_ppc(ppc_data)\n",
-    "plt.xlabel('y = Number of named storms')\n",
-    "plt.title('Bayesian Poisson Regression with SST covariante')\n",
-    "plt.xlim(0, 30)\n",
-    "plt.show()"
+    "    # Plot PPC samples\n",
+    "    ppc_data = az.from_pymc3(trace_poisson, posterior_predictive=bayes_ppc)\n",
+    "    az.plot_ppc(ppc_data, num_pp_samples=50)\n",
+    "    plt.xlabel('y = Number of named storms')\n",
+    "    plt.title('Bayesian Poisson Regression with SST covariante')\n",
+    "    plt.xlim(0, 30)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -809,14 +810,14 @@
     "# Do not modify\n",
     "# Sample C'_i\n",
     "with simple_bayes_model:\n",
-    "        simple_bayes_ppc = pm.sample_posterior_predictive(simple_trace_poisson)\n",
-    "        simple_bayes_ppc['C'] = simple_bayes_ppc['C'] + 0.0\n",
+    "    simple_bayes_ppc = pm.sample_posterior_predictive(simple_trace_poisson)\n",
+    "    simple_bayes_ppc['C'] = simple_bayes_ppc['C'] + 0.0\n",
     "\n",
-    "ppc_data = az.from_pymc3(simple_trace_poisson, posterior_predictive=simple_bayes_ppc)\n",
-    "az.plot_ppc(ppc_data)\n",
-    "plt.xlabel('C = Number of named storms')\n",
-    "plt.title('Bayesian Poisson Rate Estimation without SST covariante')\n",
-    "plt.show()"
+    "    ppc_data = az.from_pymc3(simple_trace_poisson, posterior_predictive=simple_bayes_ppc)\n",
+    "    az.plot_ppc(ppc_data, num_pp_samples=50)\n",
+    "    plt.xlabel('C = Number of named storms')\n",
+    "    plt.title('Bayesian Poisson Rate Estimation without SST covariante')\n",
+    "    plt.show()"
    ]
   },
   {
