--- a/lab/lab6/lab6.ipynb
+++ b/lab/lab6/lab6.ipynb
@@ -144,13 +144,13 @@
     "$$\\hat \\mu_{MLE} = \\arg\\max_{\\mu} l(C_1, \\ldots, C_N| \\mu)$$\n",
     "\n",
     "The PMF of a Poisson R.V. is $\\mathbb{P}\\{C_i = k\\}=\\frac{\\mu^k e^{-\\mu}}{k!}$. Therefore the log-likelihood of the data is:\n",
-    "$$l(C_1, \\ldots, C_N| \\mu) = \\ln(\\mu)\\sum_{i=1}^N x_i -N\\mu - \\sum_{i=1}^N \\ln(x_i!)$$\n",
+    "$$l(C_1, \\ldots, C_N| \\mu) = \\ln(\\mu)\\sum_{i=1}^N C_i -N\\mu - \\sum_{i=1}^N \\ln(C_i!)$$\n",
     "\n",
     "The first derivative of the log-likelihood with respect to the parameter $\\mu$ is\n",
-    "$$\\frac{d}{d\\mu}l(C_1, \\ldots, C_N| \\mu) = \\frac{d}{d\\mu} \\left( \\ln(\\mu)\\sum_{i=1}^N x_i -N\\mu - \\sum_{i=1}^N \\ln(x_i!) \\right) = \\frac{1}{\\mu}\\sum_{i=1}^N x_i - n$$\n",
+    "$$\\frac{d}{d\\mu}l(C_1, \\ldots, C_N| \\mu) = \\frac{d}{d\\mu} \\left( \\ln(\\mu)\\sum_{i=1}^N C_i -N\\mu - \\sum_{i=1}^N \\ln(C_i!) \\right) = \\frac{1}{\\mu}\\sum_{i=1}^N C_i - n$$\n",
     "\n",
     "Imposing that the first derivative be equal to zero, we get:\n",
-    "$$\\hat \\mu_{MLE} = \\frac{1}{N} \\sum_{i=1}^N x_i $$\n",
+    "$$\\hat \\mu_{MLE} = \\frac{1}{N} \\sum_{i=1}^N C_i $$\n",
     "\n",
     "Therefore, the estimator $\\hat \\mu_{MLE}$ is just the sample mean of the $N$ observations. This makes intuitive sense because the expected value of a Poisson random variable is equal to its rate parameter, and the sample mean is an unbiased estimator of the expected value.\n",
     "\n",
@@ -307,8 +307,8 @@
     "    - compute bootstrap sample estimate: $\\bar C^{*(b)} = \\frac{C^{*(b)}_1, C^{*(b)}_2, \\ldots, C^{*(b)}_N}{N}$\n",
     "- compute mean estimate: $\\mu_{bootstrap} = \\frac{\\sum_{b=1}^B \\bar C^{*(b)}}{B}$\n",
     "- compute $(1-\\alpha)$ confidence intervals:\n",
-    "    - `lower_bound`: The $\\alpha/2$ percentile of the array $[ C^{*(1)},  C^{*(2)}, \\ldots ,  C^{*(N)} ]$\n",
-    "    - `upper_bound`: The $(1-\\alpha/2)$ percentile of the array $[ C^{*(1)},  C^{*(2)}, \\ldots ,  C^{*(N)}]$\n",
+    "    - `lower_bound`: The $\\alpha/2$ percentile of the array $[ \\bar C^{*(1)},  \\bar C^{*(2)}, \\ldots ,  \\bar C^{*(B)} ]$\n",
+    "    - `upper_bound`: The $(1-\\alpha/2)$ percentile of the array $[ \\bar C^{*(1)}, \\bar C^{*(2)}, \\ldots ,  \\bar C^{*(B)}]$\n",
     "    \n",
     "### TODO: Complete the function below to compute boostrap estimate and confidence intervals"
    ]
