--- a/lab/lab7/lab07.ipynb
+++ b/lab/lab7/lab07.ipynb
@@ -73,7 +73,7 @@
     "Suppose there's also a confounder $X_2$, which is the income of the student's family. We don't observe $X_2$, but it affects both the number of books the student reads (wealthier families may have more access to books) and the student's SAT score (wealthier students may have more access to SAT tutoring).\n",
     "\n",
     "We assume that the outcome is generated as a linear function of the confounder $X_2$ and treatment $X_1$, with additive noise $\\epsilon$:\n",
-    "$$$$\n",
+    "\n",
     "$$Y = \\beta_1 X_1 + \\beta_2 X_2 + \\epsilon.$$\n",
     "\n",
     "The goal is to estimate $\\beta_1$, the true causal effect of the number of books a student reads on their SAT score."
@@ -126,10 +126,10 @@
     "$$X_1^{(i)} = \\gamma_1 Z^{(i)} + \\gamma_2 X_2^{(i)} + \\epsilon'^{(i)},$$\n",
     "\n",
     "### The true model was generated in the following manner:\n",
-    " - Sample $Z^{(i)}\\sim N(20,5)$    $\\ \\longleftarrow\\ $   *Duration of Readathon for student* $i$ \n",
-    " - Sample $X_2^{(i)} \\sim \\text{Normal}(50, 10)$   $\\ \\longleftarrow\\ $   *Income in tens of thousands for the family of student* $i$ **(unobserved variable)**\n",
-    " - Generate $X_1^{(i)}$ by setting $\\gamma_1 = \\gamma_2 =1$ and sampling a noise $\\epsilon'^{(i)}\\sim N(0,5)$   $\\ \\longleftarrow\\ $  *Number of books read by student* $i$\n",
-    " - Generate $Y_i^{(i)}$ by setting $\\beta_1 = 5$, $\\beta_2 = 12$  and sampling a noise $\\epsilon^{(i)}\\sim N(0,10)$ $\\ \\longleftarrow\\ $  *SAT score for student* $i$\n",
+    " - Sample $Z^{(i)}\\sim N(20,5)$ :   *Duration of Readathon for student* $i$ \n",
+    " - Sample $X_2^{(i)} \\sim \\text{Normal}(50, 10)$ :  *Income in thousands for the family of student* $i$ **(unobserved variable)**\n",
+    " - Generate $X_1^{(i)}$ by setting $\\gamma_1 = \\gamma_2 =1$ and sampling a noise $\\epsilon'^{(i)}\\sim N(0,5)$  :  *Number of books read by student* $i$\n",
+    " - Generate $Y_i^{(i)}$ by setting $\\beta_1 = 5$, $\\beta_2 = 12$  and sampling a noise $\\epsilon^{(i)}\\sim N(0,10)$ : *SAT score for student* $i$\n",
     "\n",
     "## Load the data\n",
     "Run the cells below to load and plot the data."
@@ -193,9 +193,9 @@
     "## 1.b Understanding the marginal impacts\n",
     "### `TODO`: Inspect the Data Generation section above, and answer the following questions. \n",
     "#### i) What is the true causal effect of an extra book read on the SAT score (i.e. if you hold everything else constant and you read one more book by how much will the SAT score change)?\n",
-    "#### ii) What is the true causal effect of increasing income by \\$10000 on the SAT score?\n",
+    "#### ii) What is the true causal effect of increasing income by \\$1000 on the SAT score?\n",
     "#### iii) What is the true causal effect of an extra readathon day on the number of books read?\n",
-    "#### iv) What is the true causal effect of increaing income by \\$10000 on the number of books read?"
+    "#### iv) What is the true causal effect of increaing income by \\$1000 on the number of books read?"
    ]
   },
   {
@@ -273,7 +273,7 @@
     "# Print the fitted_estimators\n",
     "gammas = gammas_model.params\n",
     "print(\"The estimated causal effect on number of books read of an additional Readathon day is {:.2f}\".format(gammas[0]))\n",
-    "print(\"The estimated causal effect on number of books read of an additional $10000 is {:.2f}\".format(gammas[1]))\n",
+    "print(\"The estimated causal effect on number of books read of an additional $1000 is {:.2f}\".format(gammas[1]))\n",
     "# The numbers you get should be very close to you answer in 1.b"
    ]
   },
@@ -304,7 +304,7 @@
     "# Print the fitted_estimators\n",
     "betas = betas_model.params\n",
     "print(\"The estimated causal effect on SAT score of an additional book read is {:.2f}\".format(betas[0]))\n",
-    "print(\"The estimated causal effect on SAT score of an additional $10000 is {:.2f}\".format(betas[1]))\n",
+    "print(\"The estimated causal effect on SAT score of an additional $1000 is {:.2f}\".format(betas[1]))\n",
     "# The numbers you get should be very close to you answer in 1.b"
    ]
   },
