--- a/lab/lab9/lab09.ipynb
+++ b/lab/lab9/lab09.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# Question 1: Stable Matching {-}\n",
     "\n",
-    "In this question we will assume that each player $j$ knows the rewards associated with each of the arms: $\\{\\mu_{i,1}, \\mu_{i,2}, \\ldots, \\mu_{i,n}\\}$.\n",
+    "In this question we will assume that each player $j$ knows the rewards associated with each of the arms: $\\{\\mu_{1,j}, \\mu_{2,j}, \\ldots, \\mu_{n,j}\\}$.\n",
     "\n",
     "#### Matching: {-}\n",
     "A Matching $M$ is a set of $n$ (player-arm) pairs of the form $(j', i')$. Such that:\n",
