--- a/lab/lab10/lab10.ipynb
+++ b/lab/lab10/lab10.ipynb
@@ -520,9 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`TODO:` fill in your answer\n",
-    "\n",
-    "Answer: The agent chose the smaller reward since in the first few runs it will build Q-values faster for the closer reward. Once it has a non-zero Q-value path for that reward that leads to the smaller reward it will always take it, never learning the Q-values that will lead it to the larger reward."
+    "`TODO:` fill in your answer"
    ]
   },
   {
