--- a/lab/lab11/lab11.ipynb
+++ b/lab/lab11/lab11.ipynb
@@ -325,11 +325,10 @@
     "\n",
     "Solving for this,\n",
     "\n",
-    "$$\\begin{align*}\n",
-    "\\Delta_f &= \\max_{\\text{neighboring } X,X'} ||f(X) - f(X')||_1 \\\\\n",
-    "&= \\max_{\\text{neighboring } X,X'} \\bigg|\\bigg|\\frac{1}{N}\\sum_{i=1}^N X_i - \\frac{1}{N}\\sum_{i=1}^N X_i'\\bigg|\\bigg|_1 \\\\\n",
-    "&= \\frac{d}{N}\n",
-    "\\end{align*}\n",
+    "$$\n",
+    "\\Delta_f = \\max_{\\text{neighboring } X,X'} ||f(X) - f(X')||_1 \\\\\n",
+    "= \\max_{\\text{neighboring } X,X'} \\bigg|\\bigg|\\frac{1}{N}\\sum_{i=1}^N X_i - \\frac{1}{N}\\sum_{i=1}^N X_i'\\bigg|\\bigg|_1 \\\\\n",
+    "= \\frac{d}{N}\n",
     "$$\n",
     "\n",
     "In Discussion 13, we showed that the above algorithm $\\mathcal{A}(X)$ is $\\epsilon$-differentially private. "
@@ -570,7 +569,7 @@
     "\n",
     "You are given only $N=30000$, $f(S)$ and $f(S')$ (you don't have access to neither $S$ nor $S'): Attempt to obtain private information about the patient whose data has been modified.\n",
     "\n",
-    "`Hint:` You should be able to infer that this patient was admitted to hospital having consumed cocaine and amphetamines, but not alcohol"
+    "`Hint:` You should be able to infer that this patient was admitted to hospital having consumed alcohol but not cocaine and amphetamines."
    ]
   },
   {
